// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directionStepsReducer properly reduces direction step array 1`] = `
Array [
  Object {
    "text": "step 1",
  },
  Object {
    "text": "step 2",
  },
  Object {
    "text": "step 1",
  },
]
`;

exports[`directionsReducer properly reduces direction array 1`] = `
Array [
  Object {
    "label": "section 1",
    "steps": Array [
      Object {
        "text": "step 1",
      },
    ],
  },
  Object {
    "steps": Array [
      Object {
        "text": "step 1",
      },
      Object {
        "text": "step 2",
      },
    ],
  },
]
`;

exports[`ingredientReducer properly reduces ingredient 1`] = `
Object {
  "amount": Object {
    "max": "10",
    "min": "5",
  },
  "name": "garlic",
  "optional": false,
  "prep": "minced",
  "toTaste": true,
  "unit": "tablespoon",
}
`;

exports[`ingredientsReducer properly reduces ingredients array 1`] = `
Array [
  Object {
    "ingredients": Array [
      Object {
        "amount": "2",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "toTaste": true,
        "unit": "cup",
      },
    ],
    "label": "section 1",
  },
  Object {
    "ingredients": Array [
      Object {
        "amount": Object {
          "max": "10",
          "min": "5",
        },
        "name": "garlic",
        "optional": false,
        "prep": "minced",
        "toTaste": true,
        "unit": "tablespoon",
      },
      Object {
        "amount": "3",
        "name": "carrot",
        "optional": undefined,
        "prep": undefined,
        "toTaste": undefined,
        "unit": undefined,
      },
    ],
  },
]
`;

exports[`rangedAmountReducer properly reduces ranged amount 1`] = `
Object {
  "max": "10",
  "min": "5",
}
`;

exports[`recipeMutationReducer all fields 1`] = `
Object {
  "message": "Success!",
  "recipe": Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [
      Object {
        "label": "section 1",
        "steps": Array [
          Object {
            "text": "step 1",
          },
          Object {
            "text": "step 2",
          },
        ],
      },
    ],
    "id": 123,
    "ingredients": Array [
      Object {
        "ingredients": Array [
          Object {
            "amount": "2",
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
          },
          Object {
            "amount": Object {
              "max": "10",
              "min": "5",
            },
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "toTaste": true,
            "unit": "tablespoon",
          },
        ],
        "label": "ingredient section 1",
      },
    ],
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "tags": Array [
      Object {
        "id": 1,
        "label": "bread",
        "typeid": 2,
      },
      Object {
        "id": 2,
        "label": "snack",
        "typeid": 4,
      },
    ],
    "timing": Object {
      "prep": Array [
        Object {
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
  "success": true,
}
`;

exports[`recipeMutationReducer no message field 1`] = `
Object {
  "message": undefined,
  "recipe": Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [
      Object {
        "label": "section 1",
        "steps": Array [
          Object {
            "text": "step 1",
          },
          Object {
            "text": "step 2",
          },
        ],
      },
    ],
    "id": 123,
    "ingredients": Array [
      Object {
        "ingredients": Array [
          Object {
            "amount": "2",
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
          },
          Object {
            "amount": Object {
              "max": "10",
              "min": "5",
            },
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "toTaste": true,
            "unit": "tablespoon",
          },
        ],
        "label": "ingredient section 1",
      },
    ],
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "tags": Array [
      Object {
        "id": 1,
        "label": "bread",
        "typeid": 2,
      },
      Object {
        "id": 2,
        "label": "snack",
        "typeid": 4,
      },
    ],
    "timing": Object {
      "prep": Array [
        Object {
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
  "success": true,
}
`;

exports[`recipeMutationReducer no recipe field 1`] = `
Object {
  "message": "Success!",
  "recipe": null,
  "success": true,
}
`;

exports[`recipeMutationReducer no success field 1`] = `
Object {
  "message": "Success!",
  "recipe": Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [
      Object {
        "label": "section 1",
        "steps": Array [
          Object {
            "text": "step 1",
          },
          Object {
            "text": "step 2",
          },
        ],
      },
    ],
    "id": 123,
    "ingredients": Array [
      Object {
        "ingredients": Array [
          Object {
            "amount": "2",
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
          },
          Object {
            "amount": Object {
              "max": "10",
              "min": "5",
            },
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "toTaste": true,
            "unit": "tablespoon",
          },
        ],
        "label": "ingredient section 1",
      },
    ],
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "tags": Array [
      Object {
        "id": 1,
        "label": "bread",
        "typeid": 2,
      },
      Object {
        "id": 2,
        "label": "snack",
        "typeid": 4,
      },
    ],
    "timing": Object {
      "prep": Array [
        Object {
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
  "success": false,
}
`;

exports[`recipeReducer all recipe components 1`] = `
Object {
  "dateAdded": "2020-05-10 00:00:45.511 +00:00",
  "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
  "description": "the best recipe ever",
  "directions": Array [
    Object {
      "label": "section 1",
      "steps": Array [
        Object {
          "text": "step 1",
        },
        Object {
          "text": "step 2",
        },
      ],
    },
  ],
  "id": 123,
  "ingredients": Array [
    Object {
      "ingredients": Array [
        Object {
          "amount": "2",
          "name": "apples",
          "optional": true,
          "prep": "chopped",
          "toTaste": true,
          "unit": "cup",
        },
        Object {
          "amount": Object {
            "max": "10",
            "min": "5",
          },
          "name": "garlic",
          "optional": false,
          "prep": "minced",
          "toTaste": true,
          "unit": "tablespoon",
        },
      ],
      "label": "ingredient section 1",
    },
  ],
  "photo": "http://some.url.com/pic.jpg",
  "servings": 2,
  "source": Object {
    "display": "Mandy's Kitchen",
    "url": "http://some.url.com/recipe",
  },
  "tags": Array [
    Object {
      "id": 1,
      "label": "bread",
      "typeid": 2,
    },
    Object {
      "id": 2,
      "label": "snack",
      "typeid": 4,
    },
  ],
  "timing": Object {
    "prep": Array [
      Object {
        "units": "MINUTE",
        "value": "2",
      },
    ],
    "total": Array [
      Object {
        "units": "MINUTE",
        "value": "20",
      },
      Object {
        "units": "HOUR",
        "value": "1",
      },
    ],
  },
  "title": "my first recipe",
}
`;

exports[`tagsReducer properly reduces tags 1`] = `
Array [
  Object {
    "id": 1,
    "label": "bread",
    "typeid": 2,
  },
  Object {
    "id": 2,
    "label": "snack",
    "typeid": 4,
  },
]
`;

exports[`timeReducer properly reduces total time array 1`] = `
Array [
  Object {
    "units": "MINUTE",
    "value": "20",
  },
  Object {
    "units": "HOUR",
    "value": "1",
  },
]
`;

exports[`timingReducer properly reduces timing array 1`] = `
Object {
  "prep": Array [
    Object {
      "units": "MINUTE",
      "value": "2",
    },
  ],
  "total": Array [
    Object {
      "units": "MINUTE",
      "value": "20",
    },
    Object {
      "units": "HOUR",
      "value": "1",
    },
  ],
}
`;
